deployment/sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexthouse-chat
  labels:
    app: nexthouse-chat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nexthouse-chat
  template:
    metadata:
      labels:
        app: nexthouse-chat
    spec:
      containers:
      - name: nexthouse-chat
        image: eastshine96/nexthouse-chat:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8889
