deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexthouse-chat
  labels:
    app: nexthouse-chat
spec:
  type: NodePort
  ports:
  - port: 8889
    targetPort: 8889
  selector:
    app: nexthouse-chat
