deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexthouse-chat
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #kubernetes.io/TLS-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  #tls:
  #- secretName: tls-secret
  rules:
  - host: "nexthouse-chat.169.56.100.104.nip.io"
    http:
      paths:
      - path: /nexthouse-chat
        pathType: Prefix
        backend:
          service:
            name: nexthouse-chat
            port:
              number: 8889
